--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --port $PORT",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d public",
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
